--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
 
-    <script>
-        function allset() { }
-    </script>
     <script defer src="int64.js"></script>
     <script defer src="rop.js"></script>
     <script defer src="exploit.js"></script>
@@ -16,146 +13,115 @@
     <script defer src="appcache_handler.js"></script>
     <script>
         window.addEventListener('load', function () {
-            add_cache_event_toasts();
+            onload_setup();
         }, false);
     </script>
 </head>
 
-</html>
-
-
 <body>
+    <svg style="display: none" version="2.0">
+        <defs>
+            <symbol id="delete-icon" viewBox="0 -960 960 960">
+                <path
+                    d="m376-300 104-104 104 104 56-56-104-104 104-104-56-56-104 104-104-104-56 56 104 104-104 104 56 56Zm-96 180q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520Zm-400 0v520-520Z" />
+            </symbol>
+            <symbol id="forward-arrow-icon" viewBox="0 -960 960 960" >
+                <path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/>
+            </symbol>
+            
+        </defs>
+    </svg>
+
     <div id="toast-container"></div>
 
-    <div style="margin: 2.5rem;">
-        <h1 style="text-align: center;">PS5&#x6298;&#x817E; 3.xx-4.xx</h1>
-        <p id="current-fw" class="text-secondary" style="text-align: center;font-size:28px;color:green;"></p>
+
+    <div id="redirector-view"
+        style="min-width: 100%; max-width: 100%; position: absolute; top: 0; left: -100%; min-height: 100%; max-height: 100%;">
+        <div style="overflow-y: scroll; width: 100%;max-height: 100vh;min-height: 100vh;" id="redirector-view-inner">
+            <h1 style="text-align: center;">&#x5730;&#x5740;&#x91CD;&#x5B9A;&#x5411;&#x670D;&#x52A1;</h1>
+            <div style="padding: 25px;padding-top: 0; display: flex;">
+                <input id="redirector-input" type="text" value="http://"
+                    style="width: 100%; border-radius: 10px; padding: 15px; background-color: #223; color: #fff; border-color: #334; font-size: 20px;" />
+                <a class="btn icon-btn" style="width: 100px;" tabindex="0" onclick="redirectorGo()">
+                    <svg width="32px" height="32px" fill="#ddd">
+                        <use href="#forward-arrow-icon" />
+                    </svg>
+                </a>
+            </div>
+
+            <div style="display: flex; flex-direction: row; max-width: 100%; padding-left: 50px; padding-right: 50px;">
+                <div style="width: 60%; margin-right: 35px; " id="redirector-pinned"></div>
+                <div style="width: 1px; background-color: #557; margin-top: 10px;"></div>
+                <div style="width: 40%; margin-left: 35px; " id="redirector-history"></div>
+            </div>
+        </div>
     </div>
 
-    <div id="before-jb-view">
+    <div id="center-view" style="position: absolute; top: 0; left: 0; width: 100%; min-height: 100%;">
 
-        <div id="run-jb-parent" class="opacity-transition"
-            style="display: flex; justify-content: center; align-items: center; position: absolute; top: 0;left: 0; width: 100%; height: 100%;">
-            <a tabindex="0" class="btn" style="max-width: 50%;" id="run-jb" onclick="runJailbreak()">&#x5F00;&#x59CB;&#x8D8A;&#x72F1;</a>
+        <div style="margin-top: 15px; position: absolute; width: 100%;">
+            <h1 style="text-align: center;">PS5&#x6298;&#x817E; 3.xx-4.xx</h1>
+            <p id="current-fw" class="text-secondary"
+                style="text-align: center; margin-bottom: 8px; padding-bottom: 0;font-size:24px;color:green;">
+            </p>
+
+            <p id="listening-ip" class="text-secondary" style="text-align: center; margin-top: 0; padding-top: 0;">
+                <br />
+            </p>
+        </div>
+        <div style="position: absolute; margin: 35px; top: 0; left: 10px;" class="opacity-transition" id="l2-redirect">
+            <div>
+                <span style="vertical-align: middle;display: inline-block;                ">
+                    <svg viewbox="0 0 79 61" xmlns="http://www.w3.org/2000/svg" style="width: 32px; height:32px;">
+                        <rect x="0" y="0" width="79" height="61" rx="13" ry="13" fill="#bdc0c2" />
+                        <text x="50%" y="50%" dy="17.5px" text-anchor="middle" fill="#4e4e4e" font-size="50"
+                            font-weight="bold">L2</text>
+                    </svg>
+                </span>
+                <span
+                    style="font-size: 18px; vertical-align: middle;display: inline-block; margin-left: 14px; font-weight: bold; color: #aaa;">&#x5730;&#x5740;&#x91CD;&#x5B9A;&#x5411;&#x670D;&#x52A1;</span>
+            </div>
         </div>
 
-        <div id="jb-progress" class=""
-            style="display: none; flex-direction: column; justify-content: center; align-items: center; position: absolute; top: 0;left: 0; width: 100%; height: 100%;">
-            <div class="lds-ellipsis">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+        <div id="before-jb-view">
+
+            <div id="run-jb-parent" class="opacity-transition"
+                style="display: flex; justify-content: center; align-items: center; position: absolute; top: 0;left: 0; width: 100%; height: 100%;">
+                <a tabindex="0" class="btn" style="max-width: 50%;" id="run-jb" onclick="runJailbreak()">&#x5F00;&#x59CB;&#x8D8A;&#x72F1;</a>
             </div>
+
+            <div id="jb-progress" class="opacity-transition"
+                style="display: flex; flex-direction: column; justify-content: center; align-items: center; position: absolute; top: 0;left: 0; width: 100%; height: 100%; opacity: 0; pointer-events: none;">
+                <div class="lds-ellipsis" style="margin-top: 40px;">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             <p id="jb-progress-status-text" style="text-align: center; width: 100%;font-size:32px;">&#x52A0;&#x8F7D;&#x4E2D;... <br/><span class="secondary-text">(&#x5982;&#x679C;&#x51BB;&#x7ED3;&#xFF0C;&#x8BF7;&#x91CD;&#x542F;&#x518D;&#x8BD5;)</span></p>
             <textarea id="console" class="log" style="display: none;"></textarea>
-        </div>
-
-        <div id="post-jb-view" class="opacity-transition"
-            style="display: flex; flex-direction: column; justify-content: center; align-items: center;opacity: 0; pointer-events: none; padding-top: 2rem;">
-            <!-- please dont judge this, if i create the elements in js after the jailbreak it 'runs out of memory'. -->
-            <!-- TODO: try making the buttons before the jb and assign the onclicks after, i think i tried this already but make sure -->
-            <div id="payloads-list" class="grid-container">
-                <a class="btn mx-auto hidden-btn" id="payload-0" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-1" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-2" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-3" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-4" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-5" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-6" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-7" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-8" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-9" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-10" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-11" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-12" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-13" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-14" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-15" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-16" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-17" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-18" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-                <a class="btn mx-auto hidden-btn" id="payload-19" tabindex="0">
-                    <p></p>
-                    <p class="secondary-text"></p>
-                </a>
-
             </div>
-        </div>
 
-
+            <div id="post-jb-view" class="opacity-transition"
+                style="width: 100%;position: relative; max-height: 10px; overflow-y: hidden; margin-top: 200px;">
+                <!-- it seems like sometimes display none to anything else and transforms like causing crashes after the jailbreak. idk. -->
+                <div id="payloads-list" class="grid-container">
+                </div>
+            </div>
 
         <center style="position: fixed;bottom: 0;width: 100%;margin-bottom: 1.5rem;" class="info opacity-transition"
             id="credits">
 <hr><br/>
 			<a  style='font-size:20px;text-align:center;'>
-             </b>Credits:Specter,Andy Nguyen,sleirsgoevy,flatz,LightningMods, ChendoChap, astrelsky, illusion,zecoxao,laureeeeeee,cheburek3000...</b></a>
+             </b>&#x5F00;&#x53D1;&#x4EBA;&#x5458;:Specter,Andy Nguyen,sleirsgoevy,flatz,LightningMods, ChendoChap, astrelsky, illusion,zecoxao,laureeeeeee,cheburek3000...</b></a>
 			 <br>
 			<a  style='font-size:20px;text-align:center;'>
-             2023.11.05</b></a>
+             2023.11.11</b></a>
         </h3>
-        </center>
+            </center>
+        </div>
     </div>
 
 </body>
-<script>
 
-</script>
-</script>
+</html>
